--- a/extract_dataset.ipynb
+++ b/extract_dataset.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total images with resolution 256x256: 4\n",
+      "Total images with resolution 256x256: 5\n",
       "Images with resolution 256x256:\n",
       "comic3.png\n",
       "foreman.png\n",
       "oldphoto6.png\n",
+      "ADE_val_00000114.jpg\n",
       "butterfly.png\n"
      ]
     }
@@ -21,10 +22,14 @@
    "source": [
     "import os\n",
     "from PIL import Image\n",
+    "import shutil\n",
     "\n",
     "# Path to your dataset folder\n",
-    "dataset_path = \"dataset/RealSet80\"\n",
-    "# dataset_path = \"models/ResShift/testdata/RealSet65\"\n",
+    "dataset_path = \"models/ResShift/testdata/RealSet65\"\n",
+    "selected_dir = os.path.join('dataset', \"selected_256\")\n",
+    "\n",
+    "# Create the directory if it doesn't exist\n",
+    "os.makedirs(selected_dir, exist_ok=True)\n",
     "\n",
     "# List to store image names with resolution 256x256\n",
     "images_with_256_res = []\n",
@@ -44,6 +49,8 @@
     "            # Check if resolution is 256x256\n",
     "            if width == 256 and height == 256:\n",
     "                images_with_256_res.append(filename)\n",
+    "                # Move the file to the selected directory\n",
+    "                shutil.move(filepath, os.path.join(selected_dir, filename))\n",
     "    except Exception as e:\n",
     "        print(f\"Error processing {filename}: {e}\")\n",
     "\n",
@@ -52,8 +59,7 @@
     "print(f\"Total images with resolution 256x256: {total_count}\")\n",
     "print(\"Images with resolution 256x256:\")\n",
     "for img in images_with_256_res:\n",
-    "    print(img)\n",
-    "\n"
+    "    print(img)\n"
    ]
   }
  ],
