--- a/renaming.ipynb
+++ b/renaming.ipynb
@@ -177,6 +177,59 @@
     "base_directory = \"/home/hamzaz/hamza/super-resolution-color/results\"  # Update with your actual path\n",
     "rename_files_consistently(base_directory)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import shutil\n",
+    "\n",
+    "# Base path for the directories\n",
+    "base_path = \"/home/hamzaz/hamza/super-resolution-color/flask/static/images\"\n",
+    "\n",
+    "# Directories to process\n",
+    "directories = [\n",
+    "    \"selected_256\",\n",
+    "    \"selected_256_BSRGAN\",\n",
+    "    \"selected_256_RealESRGAN\",\n",
+    "    \"selected_256_ResShift\",\n",
+    "    \"selected_256_SwinIR\"\n",
+    "]\n",
+    "\n",
+    "# Path for the main directory\n",
+    "main_dir = os.path.join(base_path, \"selected_256\")\n",
+    "\n",
+    "# Get all PNG filenames (without extensions) in the main directory\n",
+    "main_filenames = {os.path.splitext(f)[0] for f in os.listdir(main_dir) if f.endswith(\".png\")}\n",
+    "\n",
+    "for dir_name in directories:\n",
+    "    dir_path = os.path.join(base_path, dir_name)\n",
+    "    if not os.path.isdir(dir_path):\n",
+    "        print(f\"Directory {dir_path} does not exist. Skipping.\")\n",
+    "        continue\n",
+    "\n",
+    "    for file_name in os.listdir(dir_path):\n",
+    "        if file_name.endswith(\".png\"):\n",
+    "            # Extract the base name before '_'\n",
+    "            base_name = file_name.split('_')[0]\n",
+    "\n",
+    "            # Check if the base name exists in main_filenames\n",
+    "            if base_name in main_filenames:\n",
+    "                # Rename the file to \"<base_name>.png\"\n",
+    "                new_file_name = f\"{base_name}.png\"\n",
+    "                old_file_path = os.path.join(dir_path, file_name)\n",
+    "                new_file_path = os.path.join(dir_path, new_file_name)\n",
+    "                os.rename(old_file_path, new_file_path)\n",
+    "            else:\n",
+    "                # Remove files not in the main directory\n",
+    "                file_path = os.path.join(dir_path, file_name)\n",
+    "                os.remove(file_path)\n",
+    "\n",
+    "print(\"Processing completed.\")\n"
+   ]
   }
  ],
  "metadata": {
