--- a/renaming.ipynb
+++ b/renaming.ipynb
@@ -182,53 +182,82 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File log created at /home/hamzaz/hamza/super-resolution-color/flask/static/images/file_log.txt\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
-    "import shutil\n",
+    "import sys\n",
     "\n",
-    "# Base path for the directories\n",
-    "base_path = \"/home/hamzaz/hamza/super-resolution-color/flask/static/images\"\n",
+    "def main():\n",
+    "    base_path = \"/home/hamzaz/hamza/super-resolution-color/flask/static/images\"\n",
+    "    selected_dir = \"selected_256\"\n",
+    "    other_dirs = [\n",
+    "        \"selected_256_BSRGAN\",\n",
+    "        \"selected_256_RealESRGAN\",\n",
+    "        \"selected_256_ResShift\",\n",
+    "        \"selected_256_SwinIR\"\n",
+    "    ]\n",
     "\n",
-    "# Directories to process\n",
-    "directories = [\n",
-    "    \"selected_256\",\n",
-    "    \"selected_256_BSRGAN\",\n",
-    "    \"selected_256_RealESRGAN\",\n",
-    "    \"selected_256_ResShift\",\n",
-    "    \"selected_256_SwinIR\"\n",
-    "]\n",
+    "    selected_path = os.path.join(base_path, selected_dir)\n",
     "\n",
-    "# Path for the main directory\n",
-    "main_dir = os.path.join(base_path, \"selected_256\")\n",
+    "    # Check if selected_256 directory exists\n",
+    "    if not os.path.isdir(selected_path):\n",
+    "        print(f\"Error: Directory '{selected_path}' does not exist.\")\n",
+    "        sys.exit(1)\n",
     "\n",
-    "# Get all PNG filenames (without extensions) in the main directory\n",
-    "main_filenames = {os.path.splitext(f)[0] for f in os.listdir(main_dir) if f.endswith(\".png\")}\n",
+    "    # Get list of .png files in selected_256\n",
+    "    selected_files = set([\n",
+    "        f for f in os.listdir(selected_path)\n",
+    "        if os.path.isfile(os.path.join(selected_path, f)) and f.lower().endswith('.png')\n",
+    "    ])\n",
     "\n",
-    "for dir_name in directories:\n",
-    "    dir_path = os.path.join(base_path, dir_name)\n",
-    "    if not os.path.isdir(dir_path):\n",
-    "        print(f\"Directory {dir_path} does not exist. Skipping.\")\n",
-    "        continue\n",
+    "    if not selected_files:\n",
+    "        print(f\"No .png files found in '{selected_path}'. Nothing to do.\")\n",
+    "        sys.exit(0)\n",
     "\n",
-    "    for file_name in os.listdir(dir_path):\n",
-    "        if file_name.endswith(\".png\"):\n",
-    "            # Extract the base name before '_'\n",
-    "            base_name = file_name.split('_')[0]\n",
+    "    print(f\"Found {len(selected_files)} .png files in '{selected_dir}' to keep.\")\n",
     "\n",
-    "            # Check if the base name exists in main_filenames\n",
-    "            if base_name in main_filenames:\n",
-    "                # Rename the file to \"<base_name>.png\"\n",
-    "                new_file_name = f\"{base_name}.png\"\n",
-    "                old_file_path = os.path.join(dir_path, file_name)\n",
-    "                new_file_path = os.path.join(dir_path, new_file_name)\n",
-    "                os.rename(old_file_path, new_file_path)\n",
-    "            else:\n",
-    "                # Remove files not in the main directory\n",
-    "                file_path = os.path.join(dir_path, file_name)\n",
+    "    # Iterate through other directories\n",
+    "    for dir_name in other_dirs:\n",
+    "        dir_path = os.path.join(base_path, dir_name)\n",
+    "\n",
+    "        if not os.path.isdir(dir_path):\n",
+    "            print(f\"Warning: Directory '{dir_path}' does not exist. Skipping.\")\n",
+    "            continue\n",
+    "\n",
+    "        # List all .png files in the current directory\n",
+    "        current_files = set([\n",
+    "            f for f in os.listdir(dir_path)\n",
+    "            if os.path.isfile(os.path.join(dir_path, f)) and f.lower().endswith('.png')\n",
+    "        ])\n",
+    "\n",
+    "        # Determine files to delete (those not in selected_files)\n",
+    "        files_to_delete = current_files - selected_files\n",
+    "\n",
+    "        if not files_to_delete:\n",
+    "            print(f\"No extra files to delete in '{dir_name}'.\")\n",
+    "            continue\n",
+    "\n",
+    "        print(f\"\\nDeleting {len(files_to_delete)} files from '{dir_name}':\")\n",
+    "        for file_name in files_to_delete:\n",
+    "            file_path = os.path.join(dir_path, file_name)\n",
+    "            try:\n",
     "                os.remove(file_path)\n",
+    "                print(f\"Deleted: {file_path}\")\n",
+    "            except Exception as e:\n",
+    "                print(f\"Failed to delete '{file_path}': {e}\")\n",
     "\n",
-    "print(\"Processing completed.\")\n"
+    "    print(\"\\nCleanup completed.\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
    ]
   }
  ],
