--- a/renaming.ipynb
+++ b/renaming.ipynb
@@ -180,14 +180,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File log created at /home/hamzaz/hamza/super-resolution-color/flask/static/images/file_log.txt\n"
+      "Found 20 .png files in 'selected_256' to keep.\n",
+      "\n",
+      "Deleting 7 files from 'selected_256_BSRGAN':\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_BSRGAN/0839.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_BSRGAN/0872.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_BSRGAN/0832.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_BSRGAN/0858.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_BSRGAN/0820.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_BSRGAN/0838.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_BSRGAN/0840.png\n",
+      "\n",
+      "Deleting 7 files from 'selected_256_RealESRGAN':\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_RealESRGAN/0839.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_RealESRGAN/0872.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_RealESRGAN/0832.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_RealESRGAN/0858.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_RealESRGAN/0820.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_RealESRGAN/0838.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_RealESRGAN/0840.png\n",
+      "\n",
+      "Deleting 7 files from 'selected_256_ResShift':\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_ResShift/0839.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_ResShift/0872.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_ResShift/0832.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_ResShift/0858.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_ResShift/0820.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_ResShift/0838.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_ResShift/0840.png\n",
+      "\n",
+      "Deleting 7 files from 'selected_256_SwinIR':\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_SwinIR/0839.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_SwinIR/0872.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_SwinIR/0832.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_SwinIR/0858.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_SwinIR/0820.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_SwinIR/0838.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_SwinIR/0840.png\n",
+      "\n",
+      "Cleanup completed.\n"
      ]
     }
    ],
