remove some image down to 30.

--- a/renaming.ipynb
+++ b/renaming.ipynb
@@ -574,6 +574,171 @@
     "if __name__ == \"__main__\":\n",
     "    main()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selected images for deletion:\n",
+      " - 0815.png\n",
+      " - 0808.png\n",
+      " - 0839.png\n",
+      " - 0853.png\n",
+      " - 0840.png\n",
+      " - 0893.png\n",
+      " - 0885.png\n",
+      " - 0856.png\n",
+      " - 0843.png\n",
+      " - 0876.png\n",
+      "\n",
+      "Processing directory: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256/0815.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256/0808.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256/0839.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256/0853.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256/0840.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256/0893.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256/0885.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256/0856.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256/0843.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256/0876.png\n",
+      "\n",
+      "Processing directory: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_BSRGAN\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_BSRGAN/0815.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_BSRGAN/0808.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_BSRGAN/0839.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_BSRGAN/0853.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_BSRGAN/0840.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_BSRGAN/0893.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_BSRGAN/0885.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_BSRGAN/0856.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_BSRGAN/0843.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_BSRGAN/0876.png\n",
+      "\n",
+      "Processing directory: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_RealESRGAN\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_RealESRGAN/0815.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_RealESRGAN/0808.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_RealESRGAN/0839.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_RealESRGAN/0853.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_RealESRGAN/0840.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_RealESRGAN/0893.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_RealESRGAN/0885.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_RealESRGAN/0856.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_RealESRGAN/0843.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_RealESRGAN/0876.png\n",
+      "\n",
+      "Processing directory: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_ResShift\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_ResShift/0815.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_ResShift/0808.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_ResShift/0839.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_ResShift/0853.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_ResShift/0840.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_ResShift/0893.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_ResShift/0885.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_ResShift/0856.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_ResShift/0843.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_ResShift/0876.png\n",
+      "\n",
+      "Processing directory: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_SwinIR\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_SwinIR/0815.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_SwinIR/0808.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_SwinIR/0839.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_SwinIR/0853.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_SwinIR/0840.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_SwinIR/0893.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_SwinIR/0885.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_SwinIR/0856.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_SwinIR/0843.png\n",
+      "Deleted: /home/hamzaz/hamza/super-resolution-color/flask/static/images/selected_256_SwinIR/0876.png\n",
+      "\n",
+      "Image deletion process completed successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import random\n",
+    "import sys\n",
+    "\n",
+    "def main():\n",
+    "    # Define the base directory where the selected_256 directories are located\n",
+    "    base_dir = \"/home/hamzaz/hamza/super-resolution-color/flask/static/images\"\n",
+    "    # List of all selected_256 directories\n",
+    "    selected_dirs = [\n",
+    "        \"selected_256\",\n",
+    "        \"selected_256_BSRGAN\",\n",
+    "        \"selected_256_RealESRGAN\",\n",
+    "        \"selected_256_ResShift\",\n",
+    "        \"selected_256_SwinIR\"\n",
+    "    ]\n",
+    "\n",
+    "    # List of 20 images that were previously copied\n",
+    "    all_images = [\n",
+    "        \"0834.png\",\n",
+    "        \"0862.png\",\n",
+    "        \"0802.png\",\n",
+    "        \"0840.png\",\n",
+    "        \"0858.png\",\n",
+    "        \"0876.png\",\n",
+    "        \"0873.png\",\n",
+    "        \"0843.png\",\n",
+    "        \"0856.png\",\n",
+    "        \"0821.png\",\n",
+    "        \"0859.png\",\n",
+    "        \"0885.png\",\n",
+    "        \"0806.png\",\n",
+    "        \"0853.png\",\n",
+    "        \"0815.png\",\n",
+    "        \"0824.png\",\n",
+    "        \"0839.png\",\n",
+    "        \"0838.png\",\n",
+    "        \"0893.png\",\n",
+    "        \"0808.png\"\n",
+    "    ]\n",
+    "\n",
+    "    # Check if there are at least 10 images to delete\n",
+    "    if len(all_images) < 10:\n",
+    "        print(\"Error: Less than 10 images available for deletion.\")\n",
+    "        sys.exit(1)\n",
+    "\n",
+    "    # Randomly select 10 unique images\n",
+    "    images_to_delete = random.sample(all_images, 10)\n",
+    "    print(\"Selected images for deletion:\")\n",
+    "    for img in images_to_delete:\n",
+    "        print(f\" - {img}\")\n",
+    "\n",
+    "    # Iterate through each selected directory and delete the chosen images\n",
+    "    for dir_name in selected_dirs:\n",
+    "        dir_path = os.path.join(base_dir, dir_name)\n",
+    "        \n",
+    "        # Check if the directory exists\n",
+    "        if not os.path.isdir(dir_path):\n",
+    "            print(f\"Warning: Directory does not exist: {dir_path}\")\n",
+    "            continue\n",
+    "        \n",
+    "        print(f\"\\nProcessing directory: {dir_path}\")\n",
+    "        \n",
+    "        for img in images_to_delete:\n",
+    "            img_path = os.path.join(dir_path, img)\n",
+    "            if os.path.isfile(img_path):\n",
+    "                try:\n",
+    "                    os.remove(img_path)\n",
+    "                    print(f\"Deleted: {img_path}\")\n",
+    "                except Exception as e:\n",
+    "                    print(f\"Error deleting {img_path}: {e}\")\n",
+    "            else:\n",
+    "                print(f\"File not found (skipping): {img_path}\")\n",
+    "\n",
+    "    print(\"\\nImage deletion process completed successfully.\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
+   ]
   }
  ],
  "metadata": {
